# SME_SPMM

./: .gitignore  CMakeLists.txt  README.md
cmake/: gtest-download.cmake  gtest.cmake
include/: denseMatrix.hpp  mm.hpp  sparseMatrix.hpp  vector.hpp
src/: spmm_ref.cpp
test/: CMakeLists.txt  testDenseMatrix.cpp  testMM.cpp  testSparseMatrix.cpp
